crates/plotnik-lib/tests/03-analyze/anchors/boundary_anchor_at_sequence_start.txt
Q = {
  .
  (a)
}
==== diagnostics ====
error: boundary anchor requires parent node context
 --> query.ptk:2:3
  |
2 |   .
  |   ^
  |
help: wrap in a named node: `(parent . (child))`
==== symbols ====
